--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "devTools": "react-devtools"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.2.4",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.3"
@@ -17,7 +19,8 @@
     "babel-jest": "24.6.0",
     "jest": "24.6.0",
     "metro-react-native-babel-preset": "0.53.1",
-    "react-test-renderer": "16.8.3"
+    "react-test-renderer": "16.8.3",
+    "reactotron-react-native": "^3.2.1"
   },
   "jest": {
     "preset": "react-native"
