--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "16.8.3",
     "react-native": "0.59.3",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-image-picker": "^0.28.1",
     "react-native-maps": "^0.24.0",
+    "react-native-modal": "^9.0.0",
     "react-native-paper": "^2.15.2",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.6.1",
